--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ src/cmake_install.cmake
 src/python_files/*.db
 src/CSrc/*
 src/Csrc/test.cpp
+src/python_files/pickled_results
 src/python_files/annealer_progression_output.txt
 src/python_files/annealer_results.txt
 all_operands_scenarios.txt
