--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,18 @@ src/python_files/settings.py
 inputPics/*
 src/python_files/blah
 src/python_files/blah.py
+
+
+
+src/python_files/combine.png
+src/python_files/compare_results.txt
+src/python_files/compare_results_copy.txt
+src/python_files/cscope.files
+src/python_files/cscope.out
+src/python_files/pareto_curved_combined_pickled
+src/python_files/pareto_set_file.txt
+src/python_files/pickled_results1
+src/python_files/pickled_results2
+src/python_files/ref.png
+src/python_files/ref_results_pickled
+src/cscope_out
