changes added to incorperate sdvbs. Also, the way error was calcualted was wrong. It was calculated as a scalar as opposed to a vector. This changed too

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+set_property(GLOBAL PROPERTY RULE_MESSAGES OFF)
 cmake_minimum_required(VERSION 2.8)
 
 add_definitions(-std=c++11) #to add the -std=c++11 flag 
