--- a/src/python_files/.gitignore
+++ b/src/python_files/.gitignore
@@ -9,3 +9,6 @@ results_pickled_all_points_s3
 ref_results_pickled_all_points
 pickled_results_all_points
 pareto_curved_combined_pickled_all_points
+pickled_results_pareto
+log
+scratch
