--- a/src/python_files/.gitignore
+++ b/src/python_files/.gitignore
@@ -5,6 +5,7 @@ opIndexSelectedFile.txt
 res_bu
 results.png
 results_pickled_all_points_s2
+../../cmake_install.cmake
 results_pickled_all_points_s3
 ref_results_pickled_all_points
 pickled_results_all_points
@@ -12,3 +13,4 @@ pareto_curved_combined_pickled_all_points
 pickled_results_pareto
 log
 scratch
+config_bu.txt
