name of the pickled files modified for better readablility

--- a/src/python_files/.gitignore
+++ b/src/python_files/.gitignore
@@ -4,14 +4,30 @@ config.txt
 opIndexSelectedFile.txt
 res_bu
 results.png
-results_pickled_all_points_s2
+all_s2_points
 ../../cmake_install.cmake
 res_bu
-results_pickled_all_points_s3
-ref_results_pickled_all_points
-pickled_results_all_points
-pareto_curved_combined_pickled_all_points
+all_s3_points
+pareto_of_flattened_all_points
+all_of_flattend
+pareto_combined_all_points
 pickled_results_pareto
 log
 scratch
 config_bu.txt
+
+../../CSrc_examples/simple_data_flows/super_simple/
+all_of_combined
+all_of_flattned
+all_of_s2
+all_of_s3
+ok
+pareto_curved_combined_pickled_all_points
+pareto_of_combined
+pareto_of_flattened
+pickled_results_all_points
+ref_results_pickled_all_points
+results_mod.png
+results_pickled_all_points_s2
+results_pickled_all_points_s3
+
